--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
    <meta name="keywords" content="{{ page.keywords }}" />
    <meta name="description" content="{{ page.description }}" />
    
-   <link rel="stylesheet" href="/stylesheets/main.css" type="text/css" media="all" />
+   <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="all" />
    
    <script src='http://www.google.com/jsapi'  type='text/javascript'></script>	
    <script type='text/javascript'>                      
@@ -19,5 +19,18 @@
    <title>{{ page.title }}</title>
 </head>
 <body id="eagermonkey.com">
+  
+  <div id="navigation" class="clearfix">
+  </div>
+  
+  <div id="content" class="clearfix">
   {{ content }}
+  </div>
+  
+  <div id="footer" class="clearfix">
+    
+  </div>
+  
+  <img src="images/tree-top.png" alt="top of tree" class="tree_top" id="tree_top"/>
+  
 </body>
