--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,5 +32,6 @@
   </div>
   
   <img src="images/tree-top.png" alt="top of tree" class="tree_top" id="tree_top"/>
+  <img src="images/tree-bottom.png" alt="bottom of tree" class="tree_bottom" id="tree_bottom"/>
   
 </body>
