--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -46,7 +46,9 @@ body{text-align:center;}
   left:0;
 }
 #tree_bottom{
-  position:fixed;
-  bottom:10px;
-  left:0;
+float:left;
+}
+
+#content{
+  min-height:420px;
 }
