--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     
   </div>
   
-  <img src="images/tree-top.png" alt="top of tree" class="tree_top" id="tree_top"/>
+  <img src="images/tree-top.jpg" alt="top of tree" class="tree_top" id="tree_top"/>
   
   
 </body>
