--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
 </head>
 <body id="eagermonkey.com">
   
+  <img src="images/logo.jpg" alt="eager monkey logo" class="logo" id="logo"/>
+  
   <div id="navigation" class="clearfix">
   </div>
   
