--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,15 @@
 </head>
 <body id="eagermonkey.com">
   
-  <img src="images/logo.jpg" alt="eager monkey logo" class="logo" id="logo"/>
+  <img src="images/logo.png" alt="eager monkey logo" class="logo" id="logo"/>
   
   <div id="navigation" class="clearfix">
+    <ul>
+      <li class='home'><a href='/' title='home'>home</a></li>
+      <li class='about'><a href='/' title='about'>about</a></li> 
+      <li class='portfolio'><a href='/' title='portfolio'>portfolio</a></li>
+      <li class='blog'><a href='/' title='blog'>blog</a></li>                 
+    </ul>
   </div>
   
   <div id="content" class="clearfix">
@@ -30,10 +36,9 @@
   </div>
   
   <div id="footer" class="clearfix">
-    
   </div>
   
   <img src="images/tree-top.jpg" alt="top of tree" class="tree_top" id="tree_top"/>
-  
-  
+  <img src="images/tree-trunk.jpg" alt="tree trunk" class="tree_trunk" id="tree_trunk"/>
+  <img src="images/tree-bottom.png" alt="Tree Bottom" class="tree_bottom" id="tree_bottom"/>
 </body>
