--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,5 +39,6 @@
   </div>
   
   <img src="images/tree-top.jpg" alt="top of tree" class="tree_top" id="tree_top"/>
+  <img src="images/trunk.jpg" alt="tree trunk" class="tree_trunk" id="tree_trunk"/>
   <img src="images/tree-bottom.png" alt="Tree Bottom" class="tree_bottom" id="tree_bottom"/>
 </body>
