--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,9 @@
    
    <title>{{ page.title }}</title>
 </head>
-<body id="eagermonkey.com">
+<body id="eagermonkey">
   
-  <img src="images/logo.png" alt="eager monkey logo" class="logo" id="logo"/>
+  <a href="/" title="home" rel="index"><img src="images/logo.png" alt="eager monkey logo" class="logo" id="logo"/></a>
   
   <div id="navigation" class="clearfix">
     <ul>
