--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 </head>
 <body id="eagermonkey">
   
-  <a href="/" title="home" rel="index"><img src="images/logo.png" alt="eager monkey logo" class="logo" id="logo"/></a>
+  <div><a href="/" title="home" rel="index"><img src="images/logo.png" alt="eager monkey logo" class="logo" id="logo"/></a></div>
   
   <div id="navigation" class="clearfix">
     <ul>
@@ -38,7 +38,8 @@
   <div id="footer" class="clearfix">
   </div>
   
-  <img src="images/tree-top.jpg" alt="top of tree" class="tree_top" id="tree_top"/>
-  <img src="images/trunk.jpg" alt="tree trunk" class="tree_trunk" id="tree_trunk"/>
-  <img src="images/tree-bottom.png" alt="Tree Bottom" class="tree_bottom" id="tree_bottom"/>
+  <div><img src="images/tree-top.jpg" alt="top of tree" class="tree_top" id="tree_top"/></div>
+  <div><img src="images/trunk.jpg" alt="tree trunk" class="tree_trunk" id="tree_trunk"/></div>
+  <div><img src="images/tree-bottom.png" alt="Tree Bottom" class="tree_bottom" id="tree_bottom"/></div>
+  
 </body>
