--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
    <meta name="description" content="{{ page.description }}" />
    
    <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="all" />
-   <!--[if lte IE 7]><link rel="stylesheet" href="stylesheets/ie.css" type="text/css" media="all" /><![endif]-->
+   <!--[if IE 7]><link rel="stylesheet" href="stylesheets/ie.css" type="text/css" media="all" /><![endif]-->
    
    <script src='http://www.google.com/jsapi'  type='text/javascript'></script>	
    <script type='text/javascript'>                      
