--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
    <meta name="description" content="{{ page.description }}" />
    
    <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="all" />
-   <!--[if IE 7]><link rel="stylesheet" href="stylesheets/ie.css" type="text/css" media="all" /><![endif]-->
-   
+   <!--[if IE 7]><link rel="stylesheet" href="stylesheets/ie7.css" type="text/css" media="all" /><![endif]-->
+   <!--[if IE 6]><link rel="stylesheet" href="stylesheets/ie6.css" type="text/css" media="all" /><![endif]-->
    <script src='http://www.google.com/jsapi'  type='text/javascript'></script>	
    <script type='text/javascript'>                      
    google.load('jquery', '1.3');
