trunk now a png

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,7 @@
   <div id="footer" class="clearfix">
   </div>
   
-  <div><img src="images/tree-top.jpg" alt="top of tree" class="tree_top" id="tree_top"/></div>
-  <div><img src="images/trunk.jpg" alt="tree trunk" class="tree_trunk" id="tree_trunk"/></div>
+  <div><img src="images/trunk.png" alt="tree trunk" class="tree_trunk" id="tree_trunk"/></div>
   
 </body>
 </html>
