--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -46,7 +46,7 @@ html{
 /** LAYOUT **/
 #logo{
   position:fixed;
-  top:69px;
+  top:73px;
   left:77px;
   z-index:3;
 }
@@ -59,6 +59,7 @@ html{
   background:#ffebd7;
   z-index:2;
   width:100%;
+  background:#ffebd7 url('../images/tree-top.jpg') no-repeat top left;
 }
 #navigation ul{margin-left:560px;}
 #navigation li{
@@ -91,12 +92,6 @@ html{
 }
 
 
-#tree_top{
-  position:fixed;
-  top:0;
-  left:0;
-  z-index:2;
-}
 #tree_trunk{
   position:fixed;
   top:215px;
