--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
    
    <title>{{ page.title }}</title>
 </head>
-<body id="eagermonkey">
+<body id="{{ page.url }}">
   
   <div><a href="/" title="home" rel="index"><img src="images/logo.png" alt="eager monkey logo" class="logo" id="logo"/></a></div>
   
