--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
    google.load('jquery', '1.3');
  	 google.load('jqueryui', '1.7');
    </script>
-   
+   <script src='javascripts/main.js'  type='text/javascript'></script>	
    <title>{{ page.title }}</title>
 </head>
 <body id="eagermonkey" class="eagermonkey {{ page.categories | join:'' }}">
@@ -39,7 +39,10 @@
   <div id="footer" class="clearfix">
   </div>
   
-  <div><img src="images/trunk.png" alt="tree trunk" class="tree_trunk" id="tree_trunk"/></div>
+  <div>
+    <a href='#' title='minimal layout' class='minimal_layout'>&laquo; less is more</a>
+    <img src="images/trunk.png" alt="tree trunk" class="tree_trunk" id="tree_trunk"/>
+  </div>
   
 </body>
 </html>
