--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -73,7 +73,7 @@ html{
 }
 #navigation a{
   display:block;
-  padding:4px 8px;
+  padding:4px 8px 3px 8px;
   color:#603813;
   background:white;
   text-decoration:none;
