--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,16 +24,18 @@
   <div><a href="/" title="home" rel="index"><img src="images/logo.png" alt="eager monkey logo" class="logo" id="logo"/></a></div>
   
   <div id="navigation" class="clearfix">
-    <ul>
-      <li class='home'><a href='/' title='home'>home</a></li>
-      <li class='about'><a href='/' title='about'>about</a></li> 
-      <li class='portfolio'><a href='/' title='portfolio'>portfolio</a></li>
-      <li class='blog'><a href='/' title='blog'>blog</a></li>                 
+    <ul class="clearfix">
+      <li class='home'><a href='/' title='home' accesskey="h">home</a></li>
+      <li class='about'><a href='/' title='about' accesskey="a">about</a></li> 
+      <li class='portfolio'><a href='/' title='portfolio' accesskey="p">portfolio</a></li>
+      <li class='blog'><a href='/' title='blog' accesskey="b">blog</a></li> 
     </ul>
   </div>
   
   <div id="content" class="clearfix">
-  {{ content }}
+    {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
+    
+    {{ content }}
   </div>
   
   <div id="footer" class="clearfix">
