--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -43,6 +43,36 @@ html{
   padding-bottom:20px;
 }
 
+pre, code{
+  font-family:courier;
+}
+/** **/
+h1,h2,h3,h4,h5{
+  font-size:232%;
+  color:#603813;
+  font-family:helvetica;
+  font-weight:bold;
+  margin-bottom:15px;
+}
+h2{font-size:174%;}
+h3{font-size:167%;font-weight:normal;}
+h4{font-size:138.5%;font-weight:normal;}
+h5{font-size:116%;font-weight:normal;}
+
+p{
+  font-size:108%;
+  margin-bottom:15px;
+  line-height:1.4em;
+}
+
+#content a{
+  color:#603813;
+  text-decoration:none;
+}
+#content a:hover{
+  color:white;
+  background:#603813;
+}
 /** LAYOUT **/
 #logo{
   position:fixed;
@@ -62,6 +92,7 @@ html{
   background:#ffebd7 url('../images/tree-top.jpg') no-repeat top left;
 }
 #navigation ul{margin-left:560px;}
+
 #navigation li{
   text-align:right;
   position:relative;
