--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,9 @@
   <div id="navigation" class="clearfix">
     <ul class="clearfix">
       <li class='home'><a href='/' title='home' accesskey="h">home</a></li>
-      <li class='about'><a href='/' title='about' accesskey="a">about</a></li> 
-      <li class='portfolio'><a href='/' title='portfolio' accesskey="p">portfolio</a></li>
-      <li class='blog'><a href='/' title='blog' accesskey="b">blog</a></li> 
+      <li class='about'><a href='/about.html' title='about' accesskey="a">about</a></li> 
+      <li class='portfolio'><a href='/portfolio.html' title='portfolio' accesskey="p">portfolio</a></li>
+      <li class='blog'><a href='/blog.html' title='blog' accesskey="b">blog</a></li> 
     </ul>
   </div>
   
