--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
    <script src='javascripts/main.js'  type='text/javascript'></script>	
    <title>{{ page.title }} - Eager Monkey</title>
 </head>
-<body id="eagermonkey" class="eagermonkey {{ page.categories | join:'' }}">
+<body id="eagermonkey" class="{{ page.categories | join:'' }}">
   
   <div><a href="/" title="home" rel="index"><img src="images/logo.png" alt="eager monkey logo" class="logo" id="logo"/></a></div>
   
