--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,30 @@
     {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
     
     {{ content }}
+    
+    {% if page.home %}
+    
+    <div class='blog_list list clearfix'>
+    <h2>Stuff that we've been thinking about...</h2>  
+      {% for post in site.categories.blog limit:3 %}
+      <div class='highlight1 chunk clearfix'>
+      </div>
+      {% endfor %}
+    </div>
+
+    <div class='portfolio_list list clearfix'>
+    <h2>Things we've been monkeying around with...</h2>  
+      {% for post in site.categories.portfolio limit:3 %}
+      <div class='highlight2 chunk clearfix'>
+      </div>
+      {% endfor %}
+    </div>
+    
+    
+    {% endif %}
+    
+    
+    
   </div>
   
   <div id="footer" class="clearfix">
