--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -73,6 +73,9 @@ p{
 }
 .highlight2{background:#AA6142;}
 
+div.list{margin-bottom:15px;}
+
+
 #content a{
   color:#603813;
   text-decoration:none;
