display some post data

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,11 @@
     <h2>Stuff that we've been thinking about...</h2>  
       {% for post in site.categories.blog limit:3 %}
       <div class='highlight1 chunk clearfix'>
+        <h3><a href="{{ post.url }}" title="{{ post.title }} - {{ post.date | date_to_string }}">{{ post.title }}</a></h3>
+        <h6>{{ post.date | date_to_string }}</h6>
+        <div class='post_content clearfix'>
+        {{ post.content | truncatewords:20 }}
+        </div>
       </div>
       {% endfor %}
     </div>
@@ -51,6 +56,11 @@
     <h2>Things we've been monkeying around with...</h2>  
       {% for post in site.categories.portfolio limit:3 %}
       <div class='highlight2 chunk clearfix'>
+        <h3><a href="{{ post.url }}" title="{{ post.title }} - {{ post.date | date_to_string }}">{{ post.title }}</a></h3>
+        <h6>{{ post.date | date_to_string }}</h6>
+        <div class='post_content clearfix'>
+        {{ post.content | truncatewords:20 }}
+        </div>
       </div>
       {% endfor %}
     </div>
