--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -196,6 +196,7 @@ a.minimal_layout{
   -webkit-border-radius: 6px;
 }
 .highlight2{background:#AA6142;}
+.highlight2 h3, .highlight2 *{color:white;}
 
 div.list{margin-bottom:15px;}
 
