--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -209,4 +209,4 @@ div.three_in_list .chunk{
   float:left;
   margin-right:4%;
 }
-div.two_in_list .chunk, div.three_in_list .chunk:last-child{margin-right:0;}
+div.two_in_list .chunk:last-child, div.three_in_list .chunk:last-child{margin-right:0;}
