--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
  	 google.load('jqueryui', '1.7');
    </script>
    <script src='javascripts/main.js'  type='text/javascript'></script>	
-   <title>{{ page.title }} - Eager Monkey</title>
+   <title>{{ page.title }}</title>
 </head>
 <body id="eagermonkey" class="{{ page.categories | join:'' }}">
   
@@ -43,7 +43,7 @@
     <h2>Stuff that we've been thinking about...</h2>  
       {% for post in site.categories.blog limit:3 %}
       <div class='highlight2 chunk clearfix'>
-        <h3><a href="{{ post.url }}" title="{{ post.title }} - {{ post.date | date_to_string }}">{{ post.title }} <span>{{ post.date | date: "%d %b %y" }}</span></a></h3>
+        <h3><a href="{{ post.url }}" title="{{ post.title }} - {{ post.date | date_to_string }}">{{ post.title }} <span class='date'>{{ post.date | date_to_string }}</span></a></h3>
         <div class='post_content clearfix'>
         {{ post.content | truncatewords:20 }}
         </div>
@@ -55,7 +55,7 @@
     <h2>Things we've been monkeying around with...</h2>  
       {% for post in site.categories.portfolio limit:3 %}
       <div class='highlight1 chunk clearfix'>
-        <h3><a href="{{ post.url }}" title="{{ post.title }} - {{ post.date | date_to_string }}">{{ post.title }} <span>{{ post.date | date: "%d %b %y" }}</span></a></h3>
+        <h3><a href="{{ post.url }}" title="{{ post.title }} - {{ post.date | date_to_string }}">{{ post.title }} <span class='date'>{{ post.date | date_to_string }}</span></a></h3>
         <div class='post_content clearfix'>
         {{ post.content | truncatewords:20 }}
         </div>
