--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
  	 google.load('jqueryui', '1.7');
    </script>
    <script src='javascripts/main.js'  type='text/javascript'></script>	
-   <title>{{ page.title }}</title>
+   <title>{{ page.title }}{% if page.home %}{% else %} - Eager Monkey{% endif %}</title>
 </head>
 <body id="eagermonkey" class="{{ page.categories | join:'' }}">
   
