--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <meta name="author" content="Eager Monkey" />
-   <meta name="keywords" content="{{ page.keywords }}" />
+   <meta name="keywords" content="{{ page.keywords | join:',' }}" />
    <meta name="description" content="{{ page.description }}" />
    
    <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="all" />
@@ -19,7 +19,7 @@
    <script src='javascripts/main.js'  type='text/javascript'></script>	
    <title>{{ page.title }}{% if page.home %}{% else %} - Eager Monkey{% endif %}</title>
 </head>
-<body id="eagermonkey" class="{{ page.categories | join:'' }}">
+<body id="eagermonkey" class="{{ page.categories | join:' ' }}">
   
   <div><a href="/" title="home" rel="index"><img src="images/logo.png" alt="eager monkey logo" class="logo" id="logo"/></a></div>
   
